# libuvc-rs

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md
.github/: dependabot.yml
.github/workflows/: ci.yml
cammy/: Cargo.toml  README.md
cammy/src/: main.rs
examples/: example.rs  mirror.rs
src/: context.rs  controls.rs  device.rs  error.rs  formats.rs  frame.rs  lib.rs  main.rs  streaming.rs
uvc-src/: Cargo.toml  build.rs
uvc-src/src/: lib.rs
uvc-sys/: Cargo.toml  build.rs  wrapper.h
uvc-sys/src/: lib.rs
