[package]
name = "uvc"
description = "Safe and ergonomic wrapper around libuvc, allowing capture of webcam streams"
version = "0.1.9"
authors = ["Magnus Ulimoen <flymagnus@gmail.com>"]
license = "MIT"
repository = "https://github.com/mulimoen/libuvc-rs.git"
categories = ["api-bindings", "multimedia::video"]
keywords = ["webcam", "capture", "camera"]
readme = "README.md"
edition = "2018"

[dependencies]
uvc-sys = { path = "uvc-sys", version = "0.1.4" }

[dev-dependencies]
glium = "0.29.0"

[features]
vendor = ["uvc-sys/vendor"]

[workspace]
members = [
    "uvc-src",
    "uvc-sys",
]

[package.metadata.docs.rs]
no-default-features = true
features = ["vendor"]
