[package]
name = "uvc"
description = "Safe and ergonomic wrapper around libuvc, allowing capture of webcam streams"
version = "0.3.0"
authors = ["Magnus Ulimoen <flymagnus@gmail.com>"]
license = "MIT"
repository = "https://github.com/mulimoen/libuvc-rs.git"
categories = ["api-bindings", "multimedia::video"]
keywords = ["webcam", "capture", "camera"]
readme = "README.md"
edition = "2021"

[dependencies]
uvc-sys = { path = "uvc-sys", version = "0.3.0" }

[dev-dependencies]
glium = "0.29.0"

[features]
default = ["vendor"]
vendor = ["uvc-sys/vendor"]
uvc_debugging = ["uvc-sys/uvc_debugging"]

[workspace]
members = [
    "uvc-src",
    "uvc-sys",
]

[package.metadata.docs.rs]
no-default-features = true
features = ["vendor"]
