[package]
name = "uvc-src"
version = "0.3.0"
authors = ["Magnus Ulimoen <flymagnus@gmail.com>"]
edition = "2021"
license-file = "source/LICENSE.txt"
build = "build.rs"
repository = "https://github.com/mulimoen/libuvc-rs"
description = "Vendored version of libuvc"
links = "uvcsrc"

[features]
jpeg = ["mozjpeg-sys"]
uvc_debugging = []

[dependencies]
mozjpeg-sys = { version = "2.2.1", default-features = false, optional = true }
libusb-sys = { version = "0.7.0", package = "libusb1-sys" }

[build-dependencies]
cc = "1.0.61"
