[package]
name = "uvc-sys"
description = "Raw wrapper of libuvc"
version = "0.1.5"
authors = ["Magnus Ulimoen <flymagnus@gmail.com>"]
links = "uvc"
build = "build.rs"
license = "MIT"
repository = "https://github.com/mulimoen/libuvc-rs.git"
categories = ["external-ffi-bindings", "multimedia::video"]
edition = "2018"

[build-dependencies]
bindgen = "0.54.0"
