[package]
name = "uvc-sys"
description = "Raw wrapper of libuvc"
version = "0.3.0"
authors = ["Magnus Ulimoen <flymagnus@gmail.com>"]
links = "uvc"
build = "build.rs"
license = "MIT"
repository = "https://github.com/mulimoen/libuvc-rs.git"
categories = ["external-ffi-bindings", "multimedia::video"]
edition = "2021"

[features]
vendor = ["uvc-src"]
uvc_debugging = ["uvc-src/uvc_debugging"]

[dependencies]
uvc-src = { path = "../uvc-src", version = "0.3.0", optional = true, features = ["jpeg"] }

[build-dependencies]
bindgen = "0.70.1"
